Add alert to SignUp and animation to user page

--- a/src/main/resources/sample/asteralbank/Main.fxml
+++ b/src/main/resources/sample/asteralbank/Main.fxml
@@ -35,47 +35,47 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="BtnAccountType" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnAccountType" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Button fx:id="BtnAccountType" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnAccountType" onMouseEntered="#Resize1" onMouseExited="#Resize2" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="BtnMoneytransfer" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnMoneytransfer" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Button fx:id="BtnMoneytransfer" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnMoneytransfer" onMouseEntered="#Resize1" onMouseExited="#Resize2" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="BtnBuyaninternet" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnBuyaninternet" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <Button fx:id="BtnBuyaninternet" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnBuyaninternet" onMouseEntered="#Resize1" onMouseExited="#Resize2" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="Btncheck" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#Btncheck" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Button fx:id="Btncheck" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#Btncheck" onMouseEntered="#Resize1" onMouseExited="#Resize2" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="BtnBuyrecharge" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnBuyrecharge" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <Button fx:id="BtnBuyrecharge" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnBuyrecharge" onMouseEntered="#Resize1" onMouseExited="#Resize2" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="BtnCommunications" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnCommunications" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <Button fx:id="BtnCommunications" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnCommunications" onMouseEntered="#Resize1" onMouseExited="#Resize2" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="BtnTurnover" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnTurnover" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+            <Button fx:id="BtnTurnover" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnTurnover" onMouseEntered="#Resize1" onMouseExited="#Resize2" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="BtnInventory" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnInventory" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+            <Button fx:id="BtnInventory" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnInventory" onMouseEntered="#Resize1" onMouseExited="#Resize2" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="BtnPayingbills" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnPayingbills" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+            <Button fx:id="BtnPayingbills" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#BtnPayingbills" onMouseEntered="#Resize1" onMouseExited="#Resize2" prefHeight="100.0" prefWidth="100.0" style="-fx-background-radius: 20;" styleClass="item" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -157,7 +157,7 @@
             </ImageView>
             <ImageView disable="true" fitHeight="130.0" fitWidth="62.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                <image>
-                  <Image url="@Paying%20bills.png" />
+                  <Image url="@Paying bills.png" />
                </image>
             </ImageView>
             <ImageView disable="true" fitHeight="125.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
@@ -167,7 +167,7 @@
             </ImageView>
             <ImageView disable="true" fitHeight="70.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <image>
-                  <Image url="@Account%20type.png" />
+                  <Image url="@Account type.png" />
                </image>
             </ImageView>
          </children>
@@ -177,8 +177,8 @@
             <Font name="Freestyle Script" size="42.0" />
          </font>
       </Label>
-      <Button fx:id="BtnCart1" layoutX="383.0" layoutY="80.0" mnemonicParsing="false" onAction="#BtnCart1" prefHeight="193.0" prefWidth="318.0" styleClass="card" stylesheets="@FirstCss.css" />
-      <Button fx:id="BtnCart2" layoutX="383.0" layoutY="350.0" mnemonicParsing="false" onAction="#BtnCart2" prefHeight="193.0" prefWidth="318.0" styleClass="card" stylesheets="@FirstCss.css" />
+      <Button fx:id="BtnCart1" layoutX="383.0" layoutY="80.0" mnemonicParsing="false" onAction="#BtnCart1" onMouseEntered="#Resize3" onMouseExited="#Resize4" prefHeight="193.0" prefWidth="318.0" styleClass="card" stylesheets="@FirstCss.css" />
+      <Button fx:id="BtnCart2" layoutX="383.0" layoutY="350.0" mnemonicParsing="false" onAction="#BtnCart2" onMouseEntered="#Resize3" onMouseExited="#Resize4" prefHeight="193.0" prefWidth="318.0" styleClass="card" stylesheets="@FirstCss.css" />
       <Button fx:id="Back" layoutX="670.0" mnemonicParsing="false" onAction="#Back" prefHeight="42.0" prefWidth="52.0" style="-fx-background-color: #284b63;">
          <cursor>
             <Cursor fx:constant="HAND" />
