--- a/src/main/resources/sample/asteralbank/BuyCharge1.fxml
+++ b/src/main/resources/sample/asteralbank/BuyCharge1.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,6 +14,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="581.0" prefWidth="409.0" styleClass="item-Css" stylesheets="@FirstCss.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.asteralbank.BuyCharge1">
    <children>
+      <ListView fx:id="listTransfer" layoutX="-1.0" layoutY="79.0" prefHeight="502.0" prefWidth="410.0" style="-fx-background-radius: 0;" styleClass="card1" />
       <AnchorPane layoutX="-189.0" layoutY="107.0" prefHeight="65.0" prefWidth="753.0" style="-fx-background-color: #d9d9d9;" />
       <AnchorPane layoutX="205.0" layoutY="74.0" prefHeight="621.0" prefWidth="65.0" rotate="39.8" style="-fx-background-color: white;" />
       <Label layoutX="-35.0" layoutY="172.0" text=". . . . . . . . . . . . . . . . . . . .">
@@ -116,7 +118,7 @@
             <Font name="Candara Light" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="lblCash" alignment="CENTER" layoutX="127.0" layoutY="84.0" prefHeight="69.0" prefWidth="154.0" style="-fx-background-color: red;" text="50 $">
+      <Label fx:id="lblCash" alignment="CENTER" layoutX="127.0" layoutY="103.0" prefHeight="69.0" prefWidth="154.0" text="50 $">
          <font>
             <Font size="50.0" />
          </font>
