--- a/src/main/resources/sample/asteralbank/FirstCss.css
+++ b/src/main/resources/sample/asteralbank/FirstCss.css
@@ -10,6 +10,7 @@
     -fx-background-color: #5e9396;
 }
 
+
 .card1{
     -fx-background-color: linear-gradient(to bottom right , #968153, #181818);
 
@@ -29,7 +30,7 @@
 }
 .card:hover {
     -fx-background-color: linear-gradient(to bottom right , #daaf47, #181818);
-    -fx-opacity: 99.75%;
+    -fx-opacity: 100%;
 }
 
 
@@ -99,7 +100,10 @@
 
 }
 
-
+.TT{
+    -fx-background-color: #968153;
+    -fx-opacity: 100%;
+}
 
 
 
@@ -136,16 +140,21 @@
     -fx-opacity: 80%;
 }
 .label2{
-    -fx-background-color: #8aa88a;
-    -fx-background-radius: 5px ;
-    -fx-text-fill: #013b01;
-    -fx-opacity: 80%;
+    -fx-opacity: 10%;
+    -fx-background-color: #181818;
+    color: white;
+    -fx-background-radius: 10px;
 }
 .label3{
-    -fx-opacity: 40%;
-    -fx-background-color: #3c9e71;
+    -fx-opacity: 10%;
+    -fx-background-color: #181818;
+    color: white;
+    -fx-background-radius: 10px;
 }
 
 .button1{
-    -fx-background-color: #d9d9d9;
+    -fx-opacity: 10%;
+    -fx-background-color: #181818;
+    -fx-color: white;
+    -fx-background-radius: 10px;
 }
