--- a/src/main/resources/sample/asteralbank/loan.fxml
+++ b/src/main/resources/sample/asteralbank/loan.fxml
@@ -29,19 +29,19 @@
                 <Font name="Freestyle Script" size="22.0" />
             </font>
         </Button>
-        <AnchorPane layoutX="10.0" layoutY="128.0" prefHeight="45.0" prefWidth="390.0" styleClass="transfer" AnchorPane.bottomAnchor="407.9304525601081" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.200000636888603" AnchorPane.topAnchor="128.0">
+        <AnchorPane layoutX="10.0" layoutY="128.0" prefHeight="45.0" prefWidth="390.0" styleClass="Button-Charge" AnchorPane.bottomAnchor="407.9304525601081" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.200000636888603" AnchorPane.topAnchor="128.0">
          <children>
-            <Button fx:id="switch_btn" layoutX="250.0" layoutY="7.0" mnemonicParsing="false" onAction="#switch_forms" text="بلند مدت">
+            <Button fx:id="switch_btn" layoutX="250.0" layoutY="7.0" mnemonicParsing="false" onAction="#switch_forms" styleClass="Button-Charge" text="بلند مدت">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Button>
-            <Button fx:id="switch_btn1" layoutX="52.0" layoutY="7.0" mnemonicParsing="false" onAction="#switch_forms" text="کوتاه مدت">
+            <Button fx:id="switch_btn1" layoutX="52.0" layoutY="7.0" mnemonicParsing="false" onAction="#switch_forms" styleClass="Button-Charge" text="کوتاه مدت">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Button>
-            <Label fx:id="slidelabel" layoutX="14.0" layoutY="-1.0" prefHeight="45.0" prefWidth="154.0" styleClass="label3" visible="false" />
+            <Label fx:id="slidelabel" layoutX="44.0" layoutY="-1.0" prefHeight="45.0" prefWidth="100.0" style="-fx-border-radius: 5; -fx-background-radius: 5;" styleClass="label3" visible="false" />
          </children>
         </AnchorPane>
       <Label layoutX="154.0" layoutY="102.0" text="نوع بازپرداخت وام درخواستی خود را مشخص نمایید :">
