--- a/src/main/resources/sample/asteralbank/internet.fxml
+++ b/src/main/resources/sample/asteralbank/internet.fxml
@@ -51,14 +51,14 @@
          </children>
         </AnchorPane>
       <Label layoutX="236.0" layoutY="99.0" text="نوع بسته انتخابی را مشخص کنید:" />
-      <AnchorPane fx:id="daydata" layoutY="204.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="189.0" prefWidth="409.0" styleClass="transfer" visible="false">
+      <AnchorPane fx:id="daydata" layoutY="204.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="189.0" prefWidth="409.0" styleClass="jfx-tab-pane" visible="false">
          <children>
             <Label layoutX="241.0" layoutY="22.0" text="بسته یک روزه ۱ گیگابایت">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Button layoutX="99.0" layoutY="18.0" mnemonicParsing="false" onAction="#day1" text="انتخاب" />
+            <Button layoutX="99.0" layoutY="18.0" mnemonicParsing="false" onAction="#day1" styleClass="Button-Charge" text="انتخاب" />
             <Label layoutX="241.0" layoutY="77.0" text="بسته یک روزه ۲ گیگابایت">
                <font>
                   <Font name="System Bold" size="14.0" />
@@ -69,18 +69,18 @@
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Button layoutX="99.0" layoutY="74.0" mnemonicParsing="false" onAction="#day2" text="انتخاب" />
-            <Button layoutX="99.0" layoutY="129.0" mnemonicParsing="false" onAction="#day3" text="انتخاب" />
+            <Button layoutX="99.0" layoutY="74.0" mnemonicParsing="false" onAction="#day2" styleClass="Button-Charge" text="انتخاب" />
+            <Button layoutX="99.0" layoutY="129.0" mnemonicParsing="false" onAction="#day3" styleClass="Button-Charge" text="انتخاب" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="monthdata" layoutY="204.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="189.0" prefWidth="409.0" styleClass="transfer" visible="false" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <AnchorPane fx:id="monthdata" layoutY="204.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="189.0" prefWidth="409.0" styleClass="jfx-tab-pane" visible="false" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <Label layoutX="241.0" layoutY="22.0" text="بسته یک ماهه ۵ گیگابایت">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Button layoutX="99.0" layoutY="18.0" mnemonicParsing="false" onAction="#month1" text="انتخاب" />
+            <Button layoutX="99.0" layoutY="18.0" mnemonicParsing="false" onAction="#month1" styleClass="Button-Charge" text="انتخاب" />
             <Label layoutX="241.0" layoutY="77.0" text="بسته یک ماهه ۱۰ گیگابایت">
                <font>
                   <Font name="System Bold" size="14.0" />
@@ -91,18 +91,18 @@
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Button layoutX="99.0" layoutY="74.0" mnemonicParsing="false" onAction="#month2" text="انتخاب" />
-            <Button layoutX="99.0" layoutY="129.0" mnemonicParsing="false" onAction="#month3" text="انتخاب" />
+            <Button layoutX="99.0" layoutY="74.0" mnemonicParsing="false" onAction="#month2" styleClass="Button-Charge" text="انتخاب" />
+            <Button layoutX="99.0" layoutY="129.0" mnemonicParsing="false" onAction="#month3" styleClass="Button-Charge" text="انتخاب" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="weekdata" layoutY="204.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="189.0" prefWidth="409.0" styleClass="transfer" visible="false">
+      <AnchorPane fx:id="weekdata" layoutY="204.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="189.0" prefWidth="409.0" styleClass="jfx-tab-pane" visible="false">
          <children>
             <Label layoutX="241.0" layoutY="22.0" text="بسته هفتگی ۲ گیگابایت">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Button layoutX="99.0" layoutY="18.0" mnemonicParsing="false" onAction="#week1" text="انتخاب" />
+            <Button layoutX="99.0" layoutY="18.0" mnemonicParsing="false" onAction="#week1" styleClass="Button-Charge" text="انتخاب" />
             <Label layoutX="241.0" layoutY="77.0" text="بسته هفتگی ۳ گیگابایت">
                <font>
                   <Font name="System Bold" size="14.0" />
@@ -113,8 +113,8 @@
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Button layoutX="99.0" layoutY="74.0" mnemonicParsing="false" onAction="#week2" text="انتخاب" />
-            <Button layoutX="99.0" layoutY="129.0" mnemonicParsing="false" onAction="#week3" text="انتخاب" />
+            <Button layoutX="99.0" layoutY="74.0" mnemonicParsing="false" onAction="#week2" styleClass="Button-Charge" text="انتخاب" />
+            <Button layoutX="99.0" layoutY="129.0" mnemonicParsing="false" onAction="#week3" styleClass="Button-Charge" text="انتخاب" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="showprice" layoutX="3.0" layoutY="393.0" prefHeight="142.0" prefWidth="403.0" visible="false">
@@ -129,7 +129,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <TextField layoutX="117.0" layoutY="24.0" prefHeight="28.0" prefWidth="169.0" promptText="شماره همراه خود را وارد کنید:" />
+            <TextField alignment="CENTER" layoutX="117.0" layoutY="24.0" prefHeight="28.0" prefWidth="169.0" promptText="شماره همراه خود را وارد کنید:" style="-fx-background-radius: 10;" styleClass="TT" />
          </children>
       </AnchorPane>
       <ImageView disable="true" fitHeight="31.0" fitWidth="27.0" layoutX="1.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
