--- a/src/main/resources/sample/asteralbank/loan.fxml
+++ b/src/main/resources/sample/asteralbank/loan.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="581.0" prefWidth="409.0" styleClass="item-Css" stylesheets="@FirstCss.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.asteralbank.loancontroller">
     <children>
-        <Label fx:id="lbltransfer" alignment="CENTER" layoutX="170.0" layoutY="13.0" text="Loan">
+        <Label fx:id="lbltransfer" alignment="CENTER" layoutX="186.0" layoutY="10.0" text="Loan">
             <font>
                 <Font name="Freestyle Script" size="32.0" />
             </font>
@@ -29,7 +29,7 @@
                 <Font name="Freestyle Script" size="22.0" />
             </font>
         </Button>
-        <AnchorPane layoutX="10.0" layoutY="128.0" prefHeight="45.0" prefWidth="390.0" styleClass="Button-Charge" AnchorPane.bottomAnchor="407.9304525601081" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.200000636888603" AnchorPane.topAnchor="128.0">
+        <AnchorPane layoutX="10.0" layoutY="128.0" prefHeight="45.0" prefWidth="390.0" styleClass="Button-ChargeM" AnchorPane.bottomAnchor="407.9304525601081" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="9.200000636888603" AnchorPane.topAnchor="128.0">
          <children>
             <Button fx:id="switch_btn" layoutX="250.0" layoutY="7.0" mnemonicParsing="false" onAction="#switch_forms" styleClass="Button-Charge" text="بلند مدت">
                <font>
@@ -48,20 +48,20 @@
          <font>
             <Font name="System Bold" size="11.686956405639648" />
          </font></Label>
-      <AnchorPane fx:id="dayloan" layoutX="-1.0" layoutY="187.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="207.0" prefWidth="409.0" styleClass="transfer" visible="false">
+      <AnchorPane fx:id="dayloan" layoutX="-1.0" layoutY="187.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="207.0" prefWidth="409.0" styleClass="jfx-tab-pane" visible="false">
          <children>
             <Label layoutX="241.0" layoutY="74.0" text="۵۰۰۰ با بازپرداخت ۲ ساله">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Button layoutX="99.0" layoutY="71.0" mnemonicParsing="false" onAction="#day1" text="انتخاب" />
+            <Button layoutX="99.0" layoutY="71.0" mnemonicParsing="false" onAction="#day1" styleClass="Button-Charge" text="انتخاب" />
             <Label layoutX="240.0" layoutY="108.0" text="۱۵۰۰۰ با بازپرداخت ۲ ساله">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Button layoutX="99.0" layoutY="105.0" mnemonicParsing="false" onAction="#day2" text="انتخاب" />
+            <Button layoutX="99.0" layoutY="105.0" mnemonicParsing="false" onAction="#day2" styleClass="Button-Charge" text="انتخاب" />
             <Label layoutX="225.0" layoutY="28.0" text="یکی از طرح های وام را انتخاب کنید :">
                <font>
                   <Font name="System Bold" size="11.686956405639648" />
@@ -93,20 +93,20 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="weekloan" layoutY="187.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="207.0" prefWidth="409.0" styleClass="transfer" visible="false">
+      <AnchorPane fx:id="weekloan" layoutY="187.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="207.0" prefWidth="409.0" styleClass="jfx-tab-pane" visible="false">
          <children>
             <Label layoutX="241.0" layoutY="74.0" text="۲۰۰۰۰ با بازپرداخت ۵ ساله">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Button layoutX="99.0" layoutY="71.0" mnemonicParsing="false" onAction="#week1" text="انتخاب" />
+            <Button layoutX="99.0" layoutY="71.0" mnemonicParsing="false" onAction="#week1" styleClass="Button-Charge" text="انتخاب" />
             <Label layoutX="240.0" layoutY="108.0" text="۵۰۰۰۰ با بازپرداخت ۵ ساله">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Button layoutX="99.0" layoutY="105.0" mnemonicParsing="false" onAction="#week2" text="انتخاب" />
+            <Button layoutX="99.0" layoutY="105.0" mnemonicParsing="false" onAction="#week2" styleClass="Button-Charge" text="انتخاب" />
             <Label layoutX="225.0" layoutY="28.0" text="یکی از طرح های وام را انتخاب کنید :">
                <font>
                   <Font name="System Bold" size="11.686956405639648" />
