--- a/src/main/resources/sample/asteralbank/BuyCharge1.fxml
+++ b/src/main/resources/sample/asteralbank/BuyCharge1.fxml
@@ -53,7 +53,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="Btn5" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="5 $" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Button fx:id="Btn5" mnemonicParsing="false" onAction="#Btn5" prefHeight="50.0" prefWidth="100.0" text="5 $" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="20.0" />
                </font>
@@ -61,7 +61,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="Btn2" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="2 $" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Button fx:id="Btn2" mnemonicParsing="false" onAction="#Btn2" prefHeight="50.0" prefWidth="100.0" text="2 $" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="20.0" />
                </font>
@@ -69,7 +69,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="Btn1" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="1 $" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Button fx:id="Btn1" mnemonicParsing="false" onAction="#Btn1" prefHeight="50.0" prefWidth="100.0" text="1 $" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="20.0" />
                </font>
@@ -77,7 +77,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="Btn10" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="10 $" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <Button fx:id="Btn10" mnemonicParsing="false" onAction="#Btn10" prefHeight="50.0" prefWidth="100.0" text="10 $" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="20.0" />
                </font>
@@ -85,7 +85,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="Btn50" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="50 $" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <Button fx:id="Btn50" mnemonicParsing="false" onAction="#Btn50" prefHeight="50.0" prefWidth="100.0" text="50 $" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="20.0" />
                </font>
@@ -93,7 +93,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="Btn20" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="20 $" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <Button fx:id="Btn20" mnemonicParsing="false" onAction="#Btn20" prefHeight="50.0" prefWidth="100.0" text="20 $" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <font>
                   <Font size="20.0" />
                </font>
@@ -118,7 +118,7 @@
             <Font name="Candara Light" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="lblCash" alignment="CENTER" layoutX="127.0" layoutY="103.0" prefHeight="69.0" prefWidth="154.0" text="50 $">
+      <Label fx:id="lblCash" alignment="CENTER" layoutX="127.0" layoutY="103.0" prefHeight="69.0" prefWidth="154.0">
          <font>
             <Font size="50.0" />
          </font>
